<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="title">Body Mass Index</string>
    <string name="weight">Weight (kg)</string>
    <string name="height">Height (cm)</string>
    <string name="bmi">BMI</string>
    <string name="status">Status</string>
    <string name="calculate">Calculate</string>
    <string name="weight_hint">weight</string>

    <!-- Existing strings -->
    <string name="severe_thinness">Severe Thinness</string>
    <string name="moderate_thinness">Moderate Thinness</string>
    <string name="mild_thinness">Mild Thinness</string>
    <string name="normal">Normal</string>
    <string name="overweight">Overweight</string>
    <string name="obese_class_i">Obese Class I</string>
    <string name="obese_class_ii">Obese Class II</string>
    <string name="obese_class_iii">Obese Class III</string>

    <string name="height_hint">height</string>

    <string name="col_date">Date</string>
    <string name="col_weight">Weight</string>
    <string name="col_height">Height</string>
    <string name="col_bmi">BMI</string>
    <string name="col_status">Status</string>

    <string name="col_title">BMI history</string>

    <string name="file_name" translatable="false">history</string>

</resources>
