<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:cropToPadding="false"
        app:srcCompat="@android:drawable/ic_menu_recent_history" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/padding_normal"
        android:layout_marginEnd="@dimen/padding_normal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:gravity="center"
                android:text="@string/title"
                android:textSize="@dimen/text_size_large" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/line_margin_top"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/weight_label"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="start|center_vertical"
                android:text="@string/weight"
                android:textSize="@dimen/text_size_normal" />

            <EditText
                android:id="@+id/weight_input"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/input_border"
                android:gravity="end"
                android:hint="@string/weight_hint"
                android:inputType="numberDecimal"
                android:padding="10dp"
                android:textSize="@dimen/text_size_normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/line_margin_top"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/height_label"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="start|center_vertical"
                android:text="@string/height"
                android:textSize="@dimen/text_size_normal" />

            <EditText
                android:id="@+id/height_input"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/input_border"
                android:gravity="end"
                android:hint="@string/height_hint"
                android:inputType="numberDecimal"
                android:padding="10dp"
                android:textSize="@dimen/text_size_normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/line_margin_top"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bmi_value_label"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="start|center_vertical"
                android:text="@string/bmi"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/bmi_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/input_border"
                android:gravity="end"
                android:minWidth="100dp"
                android:padding="10dp"
                android:textSize="@dimen/text_size_normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/line_margin_top"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bmi_status_label"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="start|center_vertical"
                android:text="@string/status"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/bmi_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/input_border"
                android:gravity="end"
                android:minWidth="100dp"
                android:padding="10dp"
                android:textSize="@dimen/text_size_normal" />
        </LinearLayout>

        <Button
            android:id="@+id/calculate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/line_margin_top"
            android:background="@drawable/btn"
            android:backgroundTint="@color/jade"
            android:padding="10dp"
            android:text="@string/calculate"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal"
            app:cornerRadius="1dp" />

        </LinearLayout>
    </LinearLayout>
